# nyt_game_suite_backend

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
migrations/: 0001_create_tables.sql
src/: error.rs  filters.rs  main.rs
src/_tests/: wordle_solver_algo.rs
src/managers/: wordle.rs
src/routes/: mod.rs  wordle.rs
web_folder/: index.html
