[package]
name = "games_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "macros", "chrono", "json"] }
dotenv = "0.15.0"
thiserror = "1.0.56"
serde = "*"
serde_json = "*"
serde_derive = "*"
urlencoding = "*"
chrono-tz = "0.9.0"
chrono = "0.4.38"

[dependencies.redis]
version = "*"
features = ["tokio-comp"]

[dev-dependencies]
anyhow = "*"
